[package]
name = "zxbasic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["development-tools", "emulators"]
keywords = ["zx-spectrum", "8-bit", "basic"]
description = "Generates BASIC code for the Sinclar ZX Spectrum programmatically"

[dependencies]
zxnumber = "0.1.0"
